--- a/Src/FastData.Examples/FastData.Examples.csproj
+++ b/Src/FastData.Examples/FastData.Examples.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Remove="..\FastData\FastData.csproj" />
-    <ProjectReference Include="..\FastData\FastData.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
+<!--    <ProjectReference Remove="..\FastData\FastData.csproj" />-->
+<!--    <ProjectReference Include="..\FastData\FastData.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />-->
   </ItemGroup>
 
 </Project>
