--- a/Src/FastData.Examples/FastData.Examples.csproj
+++ b/Src/FastData.Examples/FastData.Examples.csproj
@@ -5,10 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!--    <ProjectReference Remove="..\FastData\FastData.csproj" />-->
-    <!--    <ProjectReference Include="..\FastData\FastData.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />-->
-
-    <ProjectReference Include="..\FastData.InternalShared\FastData.InternalShared.csproj" />
+    <ProjectReference Remove="..\FastData\FastData.csproj" />
+    <ProjectReference Include="..\FastData\FastData.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
 </Project>
