--- a/Src/FastData.Generator.CPlusPlus/FastData.Generator.CPlusPlus.csproj
+++ b/Src/FastData.Generator.CPlusPlus/FastData.Generator.CPlusPlus.csproj
@@ -3,13 +3,9 @@
   <Import Project="../../Imports/Library.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0; net9.0</TargetFrameworks>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.Memory" PrivateAssets="all" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FastData.Generator\FastData.Generator.csproj" />
