--- a/Src/FastData/FastData.csproj
+++ b/Src/FastData/FastData.csproj
@@ -3,13 +3,13 @@
   <Import Project="../../Imports/Library.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0; net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0; net9.0</TargetFrameworks>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <!--<DefineConstants>DebugPrint</DefineConstants>-->
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Memory" PrivateAssets="all" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Memory" />
   </ItemGroup>
 
 </Project>
