--- a/Locals/Directory.Packages.props
+++ b/Locals/Directory.Packages.props
@@ -9,5 +9,8 @@
     <PackageVersion Include="System.IO.Hashing" Version="9.0.0" />
     <PackageVersion Include="Genbox.FastEnum" Version="1.0.0-alpha.14" />
     <PackageVersion Include="System.Memory" Version="4.5.5" />
+    <PackageVersion Include="Spectre.Console" Version="0.50.0" />
+    <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 </Project>
