--- a/Src/FastData.Generator.CSharp.Benchmarks/FastData.Generator.CSharp.Benchmarks.csproj
+++ b/Src/FastData.Generator.CSharp.Benchmarks/FastData.Generator.CSharp.Benchmarks.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FastData.Generator.CSharp.Shared\FastData.Generator.CSharp.Shared.csproj" />
+    <PackageReference Include="Genbox.FastFilter" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Genbox.FastFilter" />
+    <ProjectReference Include="..\FastData.InternalShared\FastData.InternalShared.csproj" />
   </ItemGroup>
 
 </Project>
