--- a/Src/FastData.Generator.CSharp.Tests/FastData.Generator.CSharp.Tests.csproj
+++ b/Src/FastData.Generator.CSharp.Tests/FastData.Generator.CSharp.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FastData.Generator.CSharp.Shared\FastData.Generator.CSharp.Shared.csproj" />
+    <ProjectReference Include="..\FastData.InternalShared\FastData.InternalShared.csproj" />
   </ItemGroup>
 
 </Project>
