--- a/Locals/Directory.Packages.props
+++ b/Locals/Directory.Packages.props
@@ -14,5 +14,6 @@
     <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
     <PackageVersion Include="Verify.Xunit" Version="28.4.0" />
+    <PackageVersion Include="xunit.extensibility.core" Version="2.9.3" />
   </ItemGroup>
 </Project>
