--- a/Locals/Directory.Packages.props
+++ b/Locals/Directory.Packages.props
@@ -15,5 +15,10 @@
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
     <PackageVersion Include="Verify.Xunit" Version="28.5.0" />
     <PackageVersion Include="xunit.extensibility.core" Version="2.9.3" />
+    <PackageVersion Include="AgileObjects.ReadableExpressions" Version="4.1.3" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
+    <PackageVersion Include="Serilog.Expressions" Version="5.0.0" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="9.0.1" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 </Project>
