--- a/Src/FastData/FastData.csproj
+++ b/Src/FastData/FastData.csproj
@@ -5,11 +5,14 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0; net9.0</TargetFrameworks>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <!--<DefineConstants>DebugPrint</DefineConstants>-->
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Memory" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
 
 </Project>
