--- a/Src/FastData.Cli/FastData.Cli.csproj
+++ b/Src/FastData.Cli/FastData.Cli.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../../Imports/Library.props" />
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <AssemblyName>FastData</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
