--- a/Src/FastData.Benchmarks/FastData.Benchmarks.csproj
+++ b/Src/FastData.Benchmarks/FastData.Benchmarks.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
+  <!-- We include the usual things that benchmark imports do, because we disable it project wide -->
   <ItemGroup>
     <Using Include="BenchmarkDotNet.Attributes" />
     <PackageReference Include="BenchmarkDotNet" />
