--- a/Src/FastData.Testbed/FastData.Testbed.csproj
+++ b/Src/FastData.Testbed/FastData.Testbed.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../../Imports/Console.props" />
+
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
   </PropertyGroup>
