Source generator now include FastData as dependency

--- a/Src/FastData.SourceGenerator.Examples/FastData.SourceGenerator.Examples.csproj
+++ b/Src/FastData.SourceGenerator.Examples/FastData.SourceGenerator.Examples.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Remove="..\FastData.SourceGenerator\FastData.SourceGenerator.csproj" />
-    <ProjectReference Include="..\FastData.SourceGenerator\FastData.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
+    <PackageReference Include="Genbox.FastData.SourceGenerator" />
   </ItemGroup>
 
 </Project>
