--- a/Src/FastData.Generator.Rust.Shared/FastData.Generator.Rust.Shared.csproj
+++ b/Src/FastData.Generator.Rust.Shared/FastData.Generator.Rust.Shared.csproj
@@ -4,6 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
