--- a/Locals/Library.props
+++ b/Locals/Library.props
@@ -3,7 +3,7 @@
   <ItemGroup>
     <!--These packages include a different version of Microsoft.CodeAnalysis as runtime deps. Can't use them-->
     <PackageReference Remove="NetFabric.Hyperlinq.Analyzer" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="all" Condition="Exists('PublicAPI.Shipped.txt')" />
   </ItemGroup>
 
   <PropertyGroup>
