--- a/Src/FastData.Generator.CPlusPlus.Tests/FastData.Generator.CPlusPlus.Tests.csproj
+++ b/Src/FastData.Generator.CPlusPlus.Tests/FastData.Generator.CPlusPlus.Tests.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\FastData.InternalShared\FastData.InternalShared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+  </ItemGroup>
+
 </Project>
