Add benchmarks for QPS

--- a/Src/FastData.Benchmarks/FastData.Benchmarks.csproj
+++ b/Src/FastData.Benchmarks/FastData.Benchmarks.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FastData.Generator.CSharp\FastData.Generator.CSharp.csproj" />
     <ProjectReference Include="..\FastData.InternalShared\FastData.InternalShared.csproj" />
   </ItemGroup>
 
