--- a/Locals/Directory.Packages.props
+++ b/Locals/Directory.Packages.props
@@ -12,8 +12,7 @@
     <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageVersion Include="System.Linq.Async" Version="6.0.3" />
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
-    <PackageVersion Include="Verify.Xunit" Version="30.4.0" />
-    <PackageVersion Include="xunit.extensibility.core" Version="2.9.3" />
+    <PackageVersion Include="Verify.XunitV3" Version="31.9.0" />
     <PackageVersion Include="AgileObjects.ReadableExpressions" Version="4.1.3" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6" />
     <PackageVersion Include="Serilog.Expressions" Version="5.0.0" />
@@ -22,5 +21,6 @@
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageVersion Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="4.14.0" />
     <PackageVersion Include="Genbox.FastData.SourceGenerator" Version="0.2.0" />
+    <PackageVersion Include="xunit.v3.extensibility.core" Version="3.2.1" />
   </ItemGroup>
 </Project>
