Support case-insensitive compares

--- a/Src/FastData.Benchmarks/FastData.Benchmarks.csproj
+++ b/Src/FastData.Benchmarks/FastData.Benchmarks.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <!-- We include the usual things that benchmark imports do, because we disable it project wide -->
