--- a/Src/FastData.Generator.CSharp/FastData.Generator.CSharp.csproj
+++ b/Src/FastData.Generator.CSharp/FastData.Generator.CSharp.csproj
@@ -83,6 +83,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SingleValueCode.t4</DependentUpon>
     </Compile>
+    <Compile Include="..\..\Misc\Compat\CallContext.cs">
+      <Link>Internal\Compat\CallContext.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Misc\Compat\CompilerFeatureRequiredAttribute.cs">
+      <Link>Internal\Compat\CompilerFeatureRequiredAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Misc\Compat\IsExternalInit.cs">
+      <Link>Internal\Compat\IsExternalInit.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Misc\Compat\RequiredMemberAttribute.cs">
+      <Link>Internal\Compat\RequiredMemberAttribute.cs</Link>
+    </Compile>
   </ItemGroup>
 
 </Project>
