Split binarysearch and interpolation into separate structures

--- a/Src/FastData.Generator.CPlusPlus/FastData.Generator.CPlusPlus.csproj
+++ b/Src/FastData.Generator.CPlusPlus/FastData.Generator.CPlusPlus.csproj
@@ -157,6 +157,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SingleValueCode.t4</DependentUpon>
     </Compile>
+    <Compile Update="Templates\BinarySearchInterpolationCode.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BinarySearchInterpolationCode.t4</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
