Split tests into groups and run in parallel

--- a/Src/FastData.TestHarness.Runner/FastData.TestHarness.Runner.csproj
+++ b/Src/FastData.TestHarness.Runner/FastData.TestHarness.Runner.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FastData.Generator.CPlusPlus.TestHarness\FastData.Generator.CPlusPlus.TestHarness.csproj" />
     <ProjectReference Include="..\FastData.Generator.CSharp.TestHarness\FastData.Generator.CSharp.TestHarness.csproj" />
     <ProjectReference Include="..\FastData.Generator.Rust.TestHarness\FastData.Generator.Rust.TestHarness.csproj" />
