Refactor configs and constants into string and numeric variants

--- a/Src/FastData/FastData.csproj
+++ b/Src/FastData/FastData.csproj
@@ -16,8 +16,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\..\Misc\Compat\CompilerFeatureRequiredAttribute.cs">
+      <Link>Internal\Compat\CompilerFeatureRequiredAttribute.cs</Link>
+    </Compile>
     <Compile Include="..\..\Misc\Compat\IsExternalInit.cs">
       <Link>Internal\Compat\IsExternalInit.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Misc\Compat\RequiredMemberAttribute.cs">
+      <Link>Internal\Compat\RequiredMemberAttribute.cs</Link>
     </Compile>
   </ItemGroup>
 
